4.2.2 -> 4.3:
	- upgrade to zlib-1.2.beta7.
	- fix: short option help missing string terminator.
	- permit secondary tag match patterns with RPMQV_ALL.
	- fix: cut-n-paste error setting nopromote for Conflicts: (#81965).
	- don't use error string after gzclose (Dmitry V. Levin).
	- only internal Berkeley db from now on.
	- revive "make dist".

4.2.1 -> 4.2.2:
	- unify signal handling in librpmio, use condvar to deliver signal.
	- make peace with libtool-1.5, autoconf-2.59, automake-1.8.
	- build with db-4.2.52 internal.
	- refresh bsddb.
	- detect (and remove) dbenv files while upgrading to db-4.2.52.
	- ensure that librpmdb links against just built, not system, librpmio.
	- fix: dangling pointer brain fart (#107835).
	- fix: ds.Single() method needs malloc'd elements (#109919).

4.2 -> 4.2.1:
	- fix: nested %if handling, optind initialization posix vs. glibc.
	- add version check for package with provides and obsoletes.
	- hack out O_DIRECT support in db4 for now.
	- build with external beecrypt-3.0.0.
	- x86_64 -> athlon, ppc64[ip]series -> ppc64 arch compatibility.
	- treat missing epoch's exactly the same as Epoch: 0.
	- pass structure pointer, not args, through headerSprintf call chain.
	- add ":xml" header format modifier.
	- --queryformat '[%%{*:xml}\n]' to dump header content in XML.
	- add ".arch" suffix to erase colored packages with identical NEVR.
	- update ja man pages (#92261).
	- backport rpmsw stopwatch, insturment rpmts operations.
	? toy method to enable --stats through bindings.
	- fdCLose typo (#97257).
	- brp-python-bytecompile to automagically bytecode compile python.
	? update for fr.po (#97829).
	- don't attempt to remove dbenv on --rebuilddb.
	- autorelocate ix86 package file paths on ia64.
	- resurrect manifests, RPMRC_NOTFOUND returned by readLead().
	- python: missed tuple refcount in IDTXload/IDTXglob.
	- fix: IDTXglob should return REMOVETID sorted headers (#89857).
	- resolve elf32/elf64 file conflicts to prefer elf64.